test/functions/iterators/vass/direct-void-iterator-error.good
direct-void-iterator-error.chpl:1: error: an iterator's return type cannot be 'void'; if specified, it must be the type of the expressions the iterator yields
