test/functions/iterators/vass/direct-void-iterator-error.chpl
iter voiditer(): void {
  yield 1;
}
for i in voiditer() do writeln(i);
